Module 5 complete, other modules now require attention.

--- a/05.HTML-CSS-Responsive/index.html
+++ b/05.HTML-CSS-Responsive/index.html
@@ -10,55 +10,66 @@
 </head>
 <body>
 
+<!-- code as template to represent example site layout to demostrate responsive layout-->
+
+
+<!-- top menu. a tags not included in this example -->
 <div class="uk-container uk-container-center">
-	
 	<div class="uk-grid">
-	      <div class="tabs uk-width-small-1-4"> Gaudi</div>
-	      <div class="tabs uk-width-small-1-4"> Park Guell</div>
-	      <div class="tabs uk-width-small-1-4"> Casa Batllo</div>
-	      <div class="tabs uk-width-small-1-4"> Casa Milo</div>
+		<div class="uk-width-medium-1-2 uk-width-small-1-1">
+		<div class="uk-grid uk-text-center">
+		      <div class="tabs uk-width-small-1-4"><h3>Gaudi</h3></div>
+		      <div class="tabs uk-width-small-1-4"><h3>Park Guell</h3></div>
+		      <div class="tabs uk-width-small-1-4"><h3>Casa Batllo</h3></div>
+		      <div class="tabs uk-width-small-1-4"><h3>Casa Milo</h3></div>
+		</div>
+		</div>
 	</div>
 
+<!-- intro banner. awaits main image -->
 	<div class="uk-grid">
 	<div class="uk-block uk-block-large uk-block-primary uk-width-1-1" id="intro">
-		<h3 class="uk-vertical-align-bottom uk-align-right">Antonio Gaudi<br>
-      	Artist &amp; Architect </h3>
+		<div class="uk-align-right uk-text-large uk-text-right">
+		<h1>Antonio Gaudi <br>
+      	Artist &amp; Architect </h1>
+      	</div>
 	</div>
 	</div>
 
-	<main class="">
+<!-- main articles with responsive layout -->
+	<main>
 	<div class="uk-grid">
 	<div class="uk-width-large-1-2 uk-width-medium-1-4">
-	<article class="uk-clearfix">
+	<article class="uk-clearfix uk-article uk-margin-large-bottom">
 		<img src="http://placehold.it/160x160" alt="alt image" class="uk-align-medium-right uk-align-small-center uk-align-right">
-		<h2>Antonio Gaudi</h2>
+		<h2 class="uk-article-lead">Antonio Gaudi</h2>
 		<p>The voices of Barcelona blur in a mix of Spanish and Catalan in much the way Gaudi's work blurs the lines between architecture and artwork. </p>
     	<p>From the  tiled benches in Guell Park to the towers over Casa Mila and Casa Battlo, I fell in love with Goudi's work on my first trip to Barcelona.</p>
 	</article>
 	</div>
 
 	<div class="uk-width-large-1-2 uk-width-medium-1-4">
-	<article class="uk-clearfix">
+	<article class="uk-clearfix uk-article uk-margin-large-bottom">
 		<img src="http://placehold.it/160x160" alt="alt image" class="uk-align-medium-right uk-align-small-center uk-align-right">
-		<h2>Park Guell</h2>
+		<h2 class="uk-article-lead">Park Guell</h2>
 		<p>The benches  as Lizard fountain in Park Guell make up part of the UNESCO World Heritage Site  know as, 'The Works of Antonio Gaudi.'</p>
 		<p>The park features Gaudi's famous Lizard Fountain, as well as benches and other extraordinary examples of Gaudi's talent with tiles.</p>
 	</article>
 	</div>
 	
-	<div class="uk-width-large-1-2 uk-width-medium-1-4 uk-text-center-medium">
-	<article class="uk-clearfix">
+	<div class="uk-width-large-1-2 uk-width-medium-1-4">
+	<article class="uk-clearfix uk-article uk-margin-large-bottom">
 		<img src="http://placehold.it/160x160" alt="alt image" class="uk-align-medium-right uk-align-small-center uk-align-right">
-		<h2>Casa Batllo</h2>
+		<h2 class="uk-article-lead">Casa Batllo</h2>
 		<p>The first  time I strolled down the Passeig de Gracia (Catalan for the Promenade of  Grace), I stopped in my tracks in front of Gaudi's Casa Batllo.</p>
 	    <p>The house, wedged between two normal buildings, looks more like a giant sculpture than any house I'd ever seen anywhere else. </p>
 	</article>
 	</div>
 
 	<div class="uk-width-large-1-2 uk-width-medium-1-4">
-	<article class="uk-clearfix">
+	<article class="uk-clearfix uk-article uk-margin-large-bottom">
 		<img src="http://placehold.it/160x160" alt="alt image" class="uk-align-medium-right uk-align-small-center uk-align-right">
-		<h2>Casa Mila</h2>
+		<h2 class="uk-article-lead">Casa Mila</h2>
 		<p>A popular attraction  in Barcelona, Casa Mila, also known as La Pedrera, is arguably one of the most famous buildings designed  by Gaudi.</p>
 	    <p>The roof features a collection of chimneys and towers that  like they'd fit right in as characters in a Dr. Suess book.</p>
 	</article>
@@ -67,9 +78,9 @@
 
 	</main>
 	
-	
+	<!-- footer -->
 	<div class="uk-grid">
-	<footer class="uk-width-1-1 uk-panel uk-panel-box uk-panel-box-primary">
+	<footer class="uk-width-1-1 uk-text-center" id="footerblock">
 		<p>Copyright 2012. All rights reserved.</p>
 	</footer>
 	</div>
