Module 4 site worked on.

--- a/04.HTML-CSS/index.html
+++ b/04.HTML-CSS/index.html
@@ -9,12 +9,14 @@
 	<div class="innerbody">
 	<header>
 		<div id="mainlogo">
-		<h1>Logo</h1>
-		</div>
+		<img src="images/logo2.jpg" alt="logo image">
+		<span>And a little tagline, too.</span>
 		<div id="subtitle">
-		<h4>And a little tagline too</h4>
+		
 		</div>
-		<div class="cleartag"></div>
+		</div>
+		
+		<!-- <div class="cleartag"></div> -->
 
 	</header>
 	<nav>
@@ -47,9 +49,9 @@
 		<div>
 			<h3>Subscribe!</h3>
 			<ul>
-				<li><a href="#">Subscribe Via RSS</a></li>
-				<li><a href="#">Get Email Updates</a></li>
-				<li><a href="#">Follow us on Twitter</a></li>
+				<li><img src="images/rss.png" alt="rss logo"><a href="#">Subscribe Via RSS</a></li>
+				<li><img src="images/email.png" alt="email logo"><a href="#">Get Email Updates</a></li>
+				<li><img src="images/twitter.png" alt="twitter logo"><a href="#">Follow us on Twitter</a></li>
 			</ul>
 		</div>
 		<div>
