--- a/04.HTML-CSS/index.html
+++ b/04.HTML-CSS/index.html
@@ -7,18 +7,14 @@
 </head>
 <body>
 	<div class="innerbody">
+	<!-- main banner section -->
 	<header>
 		<div id="mainlogo">
 		<img src="images/logo2.jpg" alt="logo image">
 		<span>And a little tagline, too.</span>
-		<div id="subtitle">
-		
 		</div>
-		</div>
-		
-		<!-- <div class="cleartag"></div> -->
-
 	</header>
+	<!-- navigation menu -->
 	<nav>
 		<ul>
 			<li><a href="#">Home</a></li>
@@ -27,7 +23,7 @@
 			<li><a href="#">Contact</a></li>
 		</ul>
 	</nav>
-
+	<!-- main articles -->
 	<main>
 		<article>
 			<h2>Lorem ipsum, Dolor sit</h2>
@@ -45,6 +41,7 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt itaque nihil, fuga sapiente non amet quisquam animi ab at commodi omnis ad repellendus excepturi tempore earum provident eligendi facere recusandae. <a href="#">Read More</a></p>
 		</article>
 	</main>
+	<!-- side menu -->
 	<aside>
 		<div>
 			<h3>Subscribe!</h3>
@@ -75,9 +72,10 @@
 		</div>
 	</aside>
 	<div class="cleartag"></div>
+<!-- footer section -->
 </div>
-	<footer>
-		<div class="innerbody">
+	<footer class="innerbody">
+		<div id="footnote">
 		Copyright &copy; 2009 PSDTuts <br>
 		All Rights Reserved
 		</div>
