Added more comments to the code.

--- a/01.Coins/output.html
+++ b/01.Coins/output.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Will check console log initially</h1>
+<h1>check console log for output</h1>
 	
 <script src="coins.js"></script>
 </body>
