--- a/05.HTML-CSS-Responsive/index.html
+++ b/05.HTML-CSS-Responsive/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-<!-- code as template to represent example site layout to demostrate responsive layout-->
+<!-- code as template site to demostrate responsive layout-->
 
 
-<!-- top menu. a tags not included in this example -->
+<!-- top menu. <a> tags not included in this example -->
 <div class="uk-container uk-container-center">
 	<div class="uk-grid">
 		<div class="uk-width-medium-1-2 uk-width-small-1-1">
@@ -26,7 +26,7 @@
 		</div>
 	</div>
 
-<!-- intro banner. awaits main image -->
+<!-- intro banner. awaits main jpg image. uk-block put in as placeholder-->
 	<div class="uk-grid">
 	<div class="uk-block uk-block-large uk-block-primary uk-width-1-1" id="intro">
 		<div class="uk-align-right uk-text-large uk-text-right">
@@ -36,7 +36,7 @@
 	</div>
 	</div>
 
-<!-- main articles with responsive layout -->
+<!-- main articles with the responsive layout as desired -->
 	<main>
 	<div class="uk-grid">
 	<div class="uk-width-large-1-2 uk-width-medium-1-4">
@@ -88,7 +88,8 @@
 </div> <!-- end of container -->
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/uikit.min.js"></script>
+
 </body>
 </html>
